workloads/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.bapttf.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls: {}
